tests/k8s_testcases/network-policy-checks-bad-path/metadata_namespace_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metadata-namespace-test-type
  # wrong type:
  namespace:
  - kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
